styles: fix styles grid layout bug

--- a/src/Layouts/WorkspaceLayout/styles.module.scss
+++ b/src/Layouts/WorkspaceLayout/styles.module.scss
@@ -3,69 +3,89 @@
   max-width: 100vw;
   height: 100vh;
   display: grid;
+
+
   grid-template-areas: 
     "header header"
     "sidebar main"
   ;
   grid-template-columns: .2fr .8fr;
-  grid-template-rows: .1fr 1fr;
+  grid-template-rows: 10% 1fr;
 
   &Header {
+    height: 100%;
     grid-area: header;
-    align-items: center;
-    justify-content: center;
   }
 
   &Sidebar {
     grid-area: sidebar;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    padding: 2rem;
+    overflow: auto;
   } 
 
   &Content {
-    grid-area: main;
     width: 100%;
-    max-height: 100%;
+    grid-area: main;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
     overflow: auto;
+    padding: 2.6rem;
   }
+
   &Menu {
     display: none;
   }
 }
 
-
 @media (max-width: 425px) {
   .layout {
-    grid-template-areas: 
-      "header header"
-      "main main"
-      "menu menu"
-    ;
-    grid-template-columns: 1fr;
-    grid-template-rows: .1fr 1fr .1fr;
+    height: 100%;
+
+    display: flex;
+
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    // grid-template-areas: 
+    //   "header"
+    //   "main"
+    //   "menu"
+    // ;
+    // grid-template-columns: 1fr;
+    // grid-template-rows: .1fr auto .1fr;
 
     &Sidebar {
       display: none;
     }
 
+    &Header {
+      width: 100%;
+      background-color: #f9f9f9;
+      z-index: 1;
+      position: sticky;
+      top: 0;
+      left: 0;
+    }
+
     &Content {
-      height: 100%;
-      grid-area: main;
+      height: auto;
+      // grid-area: main;
+      padding: 1.8rem;
     }
 
     &Menu {
-      height: 100%;
-      grid-area: menu;
+      width: 100%;
       display: flex;
+      height: fit-content;
+      position: sticky;
+      bottom: 0;
+      left: 0;
+      background-color: #f9f9f9;
+      z-index: 1;
     }
   }
-
-
 }
